# SVG-drawer

./: CMakeLists.txt  README.md  image.html
src/: BaseShape.cpp  BaseShape.hpp  File.cpp  File.hpp  Image.cpp  Image.hpp  Shapes.cpp  Shapes.hpp  main.cpp
tests/: test_BaseShape.cpp  test_File.cpp  test_Image.cpp  test_Shapes.cpp
